[package]
name = "blbc"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"
resolver = "2"

[dependencies]
ink_primitives = { version = "3.0.1", default-features = false }
ink_prelude = { version = "3.0.1", default-features = false }
ink_metadata = { version = "3.0.1", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.1", default-features = false }
ink_storage = { version = "3.0.1", default-features = false }
ink_lang = { version = "3.0.1", default-features = false }

scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full"] }

base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }

# Required by casbink module
ritelinked = { version = "0.3.2" }
derive_more = { version = "0.99", default-features = false, features = ["from", "display"] }
regex-automata = { version = "0.1", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rhai = { version = "1.7.0", default-features = false, features = ["only_i32", "no_function", "no_float", "no_optimize", "no_module", "unchecked"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rhai = { version = "1.7.0", default-features = false, features = ["wasm-bindgen", "only_i32", "no_float", "no_optimize", "no_module", "unchecked"] }

[dev-dependencies]
sha2 = "0.10.0"

[lib]
name = "blbc"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
    "base64/std",
    "chrono/std",
    "regex-automata/std",
]
ink-as-dependency = []
