[package]
name = "blbc"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"
resolver = "2"

[workspace]
members = ["rhaink"]

[dependencies]
ink_primitives = { version = "3.0.1", default-features = false }
ink_prelude = { version = "3.0.1", default-features = false }
ink_metadata = { version = "3.0.1", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.1", default-features = false }
ink_storage = { version = "3.0.1", default-features = false }
ink_lang = { version = "3.0.1", default-features = false }

scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full"] }

base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }

# Required by casbink module
ritelinked = { version = "0.3.2" }
derive_more = { version = "0.99", default-features = false, features = ["from", "display"] }
regex-automata = { version = "0.1", default-features = false }

# Rhai ink! variant
rhaink = { version = "1.7.0", path = "./rhaink", features = ["only_i32", "no_function", "no_closure", "no_float", "no_optimize", "no_module", "unchecked"] }

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# rhai = { version = "1.7.0", default-features = false, features = ["only_i32", "no_function", "no_float", "no_optimize", "no_module", "unchecked"] }

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# rhai = { version = "1.7.0", default-features = false, features = ["wasm-bindgen", "only_i32", "no_function", "no_float", "no_optimize", "no_module", "unchecked"] }

[dev-dependencies]
sha2 = "0.10.0"

[lib]
name = "blbc"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std", "rhai-features"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
    "base64/std",
    "chrono/std",
    "regex-automata/std",
]
ink-as-dependency = []
# rhai-features
# rhai-features = ["only_i32", "no_function", "no_closure", "no_float", "no_optimize", "no_module", "unchecked"]
# unchecked = []                  # unchecked arithmetic
# sync = []                       # restrict to only types that implement Send + Sync
# no_position = []                # do not track position in the parser
# no_optimize = []                # no script optimizer
# no_float = []                   # no floating-point
# f32_float = []                  # set FLOAT=f32
# only_i32 = []                   # set INT=i32 (useful for 32-bit systems)
# only_i64 = []                   # set INT=i64 (default) and disable support for all other integer types
# no_index = []                   # no arrays and indexing
# no_object = []                  # no custom objects
# no_function = ["no_closure"]    # no script-defined functions (meaning no closures)
# no_closure = []                 # no automatic sharing and capture of anonymous functions to external variables
# no_module = []                  # no modules
# internals = []                  # expose internal data structures
# debugging = ["internals"]       # enable debugging
