[package]
name = "rhaink_codegen"
version = "1.4.0"
edition = "2018"
authors = ["jhwgh1968", "Stephen Chung", "Zenas Chen"]
description = "Procedural macros support package for Rhai, a scripting language and engine for Rust"
homepage = "https://rhai.rs/book/plugins/index.html"
repository = "https://github.com/rhaiscript/rhai"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[features]
default = []
std = [
	"ink_prelude/std",
]
metadata = []

[dev-dependencies]
rhaink = { path = "../", version = "1.7.0", features = [] }
trybuild = "1"

[dependencies]
ink_prelude = { version = "3.0.1", default-features = false }
proc-macro2 = "1"
syn = { version = "1.0", features = ["full", "parsing", "printing", "proc-macro", "extra-traits"] }
quote = "1"
